Prevent the navbar from overflowing. fixes #512
The fix is a bit crude as it will break as soon as we add another menu item and it shows the hamburger menu if the browser is < 1360px in width, but it's the best we can do for now.

--- a/evap/static/css/bootstrap.less
+++ b/evap/static/css/bootstrap.less
@@ -55,3 +55,9 @@
 @import "../bootstrap/less/utilities.less";
 @import "../bootstrap/less/responsive-utilities.less";
 
+
+// Custom variables
+
+// prevent the navbar from overflowing
+@grid-float-breakpoint:         1360px;
+@nav-link-padding:              10px 13px;
